# cpaor-data-viz-dashboard

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  (+1 more)
data_sources_processing_src/: .env.sample  Dockerfile  crontab  pyproject.toml  run_cron.sh  update_acaps_info.py  update_acaps_protection.py  update_acled_data.py  update_datasets.py  update_idmc_data.py  update_ipc_data.py  update_ocha_hpc_data.py
data_sources_processing_src/data_sources_processing/: datasets_metadata.json  utils.py
data_sources_processing_src/data_sources_processing/acaps_protection_indicators/: generate_predictions.py  prepare_acaps_protection_data.py  process_df.py  pull_data.py
data_sources_processing_src/data_sources_processing/acaps_protection_indicators/sources_extraction_reliefweb/: extract_map_sources_reliefweb.py
data_sources_processing_src/data_sources_processing/acled/: acled_data_preparation.py  create_locations_mapping.py
data_sources_processing_src/data_sources_processing/idmc/: idmc_data_preparation.py
data_sources_processing_src/data_sources_processing/ipc/: ipc_data_preparation.py
data_sources_processing_src/data_sources_processing/ocha_hpc/: ocha_hpc_data_preparation.py
data_sources_processing_src/data_sources_processing/ohchr/: all_crc_reports.html  prepare_final_results.py  scrape_articles.py
data_sources_processing_src/data_sources_processing/ohchr/summaries_generation_utils/: generate_embeddings.py  openai_async.py  utils.py
frontend_src/: .env.sample  Dockerfile  app.py  pyproject.toml
frontend_src/.streamlit/: secrets.toml
frontend_src/frontend/custom_pages/: country_profile.py  crisis_wise_analysis.py  methodology.py  worldwide_analysis.py
frontend_src/frontend/src/authentification/: auth.py
frontend_src/frontend/src/disclaimer/: message.py
frontend_src/frontend/src/specific_datasets_scripts/: acaps_inform_severity.py  acaps_protection_indicators.py  acled.py  idmc.py  ipc.py  ocha_hpc.py  ohchr.py  unicef_data_processing.py
frontend_src/frontend/src/utils/: load_geodata.py  utils_functions.py
frontend_src/frontend/src/visualizations/: barchart.py  maps_creation.py
frontend_src/ga_components/frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend_src/ga_components/frontend/src/: GAComponent.tsx  index.tsx
frontend_src/ga_components/ga_component/: __init__.py
helm/: .gitignore  Chart.yaml  tests.yaml  update-snapshots.sh  values-test.yaml  values.yaml
terraform/: main.tf  prod.tfvars
(+25 files in other folders)
